--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grocery Store</title>
-    <link rel="shortcut icon" href="assests/images/basket.png" type="image/x-icon">
-    <link rel="stylesheet" href="assests/styleSheets/main.css">
-    <link rel="stylesheet" href="assests/styleSheets/fontawesome-all.min.css">
+    <link rel="shortcut icon" href="./assests/images/basket.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assests/styleSheets/main.css">
+    <link rel="stylesheet" href="./assests/styleSheets/fontawesome-all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
-    <script src="assests/jS/product.js"></script>
-    <script src="assests/jS/productOperations.js"></script>
+    <script src="./assests/jS/product.js"></script>
+    <script src="./assests/jS/productOperations.js"></script>
     <script defer src="./assests/jS/Controller.js"></script>
     <script src="./assests/jS/cartOperations.js"></script>
     <script src="./assests/jS/userOperations.js"></script>
